adding year filter for player search
